--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "axios": "^0.21.1",
     "better-scroll": "^2.2.1",
     "lib-flexible": "^0.3.2",
+    "lodash": "^4.17.21",
     "vant": "^3.0.10",
     "vue": "^3.0.4",
     "vue-router": "^4.0.5",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.168",
     "@vue/compiler-sfc": "^3.0.4",
     "babel-plugin-import": "^1.13.3",
+    "less": "^4.1.1",
+    "less-loader": "^8.0.0",
     "postcss-pxtorem": "^6.0.0",
     "style-resources-loader": "^1.4.1",
-    "vite": "^1.0.0-rc.13",
-    "less": "^4.1.1",
-    "less-loader": "^8.0.0"
+    "vite": "^1.0.0-rc.13"
   }
 }
