--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "better-scroll": "^2.2.1",
     "lib-flexible": "^0.3.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "vant": "^3.0.10",
     "vue": "^3.0.4",
     "vue-router": "^4.0.5",
